<resources>
    <string name="app_name">Running tracker</string>

    <!--registration fragment-->
    <string name="registration_fragment_registration_label">Регистрация</string>
    <string name="registration_fragment_email_hint">E-mail</string>
    <string name="registration_fragment_name_hint">Имя</string>
    <string name="registration_fragment_last_name_hint">Фамилия</string>
    <string name="registration_fragment_password_hint">Пароль</string>
    <string name="registration_fragment_repeat_password_hint">Повторить пароль</string>
    <string name="registration_fragment_login_label">Войти</string>
    <string name="registration_fragment_registration_button_label">Зарегистрироваться</string>
    <string name="registration_fragment_empty_fields_error">Поля не должны быть пустыми</string>
    <string name="registration_fragment_match_email_error">Введите правильный E-mail</string>
    <string name="registration_fragment_password_matches_error">Пароли должны быть одинаковыми</string>
    <string name="registration_fragment_email_already_exists_response">Пользователь с таким E-mail уже зарегистрирован</string>
    <string name="registration_fragment_unknown_network_error">Не удалось обработать запрос, проверьте подключение к интернету, либо повторите свой запрос позже</string>

    <!--login fragment-->
    <string name="login_fragment_login_label">Вход</string>
    <string name="login_fragment_email_hint">E-mail</string>
    <string name="login_fragment_password_hint">Пароль</string>
    <string name="login_fragment_login_button_label">Войти</string>
    <string name="login_fragment_registration_label">Регистрация</string>
    <string name="login_fragment_empty_fields_error">Поля не должны быть пустыми</string>
    <string name="login_fragment_match_email_error">Введите правильный E-mail</string>
    <string name="login_fragment_invalid_credentials">Неверный логин и/или пароль</string>
    <string name="login_fragment_unknown_network_error">Не удалось обработать запрос, проверьте подключение к интернету, либо повторите свой запрос позже</string>

    <!--main activity-->
    <!--drawer-->
    <string name="drawer_menu_main_label">Главная</string>
    <string name="drawer_menu_notifications_label">Напоминания</string>
    <string name="drawer_exit_label">Выход</string>

    <!--fragment_main-->
    <string name="fragment_main_fab_desc">fab</string>
    <string name="main_fragment_havent_got_data_for_display">Нет данных для отображения</string>

    <!--running activity-->
    <string name="running_activity_start_button_label">Старт</string>
    <string name="running_activity_finish_label">Финиш</string>
    <string name="running_activity_start_timer_label">00:00:00</string>
    <string name="running_activity_run_distance_pattern">%1$s метр%2$s</string>
    <string name="running_activity_error_saving_data_into_db">Ошибка при сохранении данных</string>
    <string name="running_activity_network_error">Не удалось обработать запрос, проверьте подключение к интернету</string>
    <string name="running_activity_are_you_running_notify">Кажется вы даже не устали, давайте попробуем еще раз</string>
    <string name="running_activity_dialog_ok_button">Да</string>
    <string name="running_activity_dialog_confirm_click_finish_button">Хорошо</string>
    <string name="running_activity_dialog_cancel_button">Нет</string>
    <string name="running_activity_dialog_finish_button_is_not_click_yet">Сперва нажмите на кнопку финиш</string>
    <string name="running_activity_are_you_enable_gps">Проверьте влючен ли GPS</string>
    <string name="running_activity_wait_gps_label">Ожидаем данных GPS</string>
    <string name="running_activity_error_get_data">Не удалось загрузить данные, попробовать еще раз?</string>
    <!--track_item-->
    <string name="track_item_start_time_label">Время старта</string>
    <string name="track_item_spent_time_label">Время бега</string>
    <string name="track_item_distance_label">Расстояние</string>
    <!--current_track_fragment-->
    <string name="current_track_fragment_distance_label">Расстояние</string>
    <string name="current_fragment_track_spent_time_label">Длительность</string>
    <string name="current_fragment_run_distance_pattern">%1$s метр%2$s</string>
    <!--main activity-->
    <string name="main_activity_drawer_open">Открыт</string>
    <string name="main_activity_drawer_close">Закрыт</string>
    <string name="main_activity_cant_sent_data_to_server">Не удалось отправить данные на сервер</string>
    <!--fragment notifications-->
    <string name="notification_fragment_fab_desc">Добавление уведомлений</string>
    <string name="notification_fragment_select_time_for_run">Укажите время для напоминания о беге</string>
    <string name="notification_fragment_select_day_for_run">Выберите день для пробежки</string>
    <string name="notification_fragment_lets_go_running">Давай побегаем!</string>
    <string name="notification_adapter_time_pattern">%1$s : %2$s</string>
    <string name="notification_adapter_delete_notification_title">Удалить уведомление?</string>
    <string name="notification_adapter_dialog_ok_button">Да</string>
    <string name="notification_adapter_dialog_cancel_button">Нет</string>

    <!--tracks fragment-->
    <string name="tracks_fragment_error_get_data">Не удалось загрузить данные, попробовать еще раз?</string>
    <string name="tracks_fragment_error_get_points">Не удалось загрузить данные для треков, проверьте соединение и попробуйте еще раз</string>
    <string name="tracks_fragment_dialog_confirm_click_finish_button">Хорошо</string>
    <string name="tracks_fragment_havent_got_data_for_display">Нет данных для отображения</string>

    <!--track fragment-->
    <string name="track_fragment_error_get_data">Не удалось загрузить данные, попробовать еще раз?</string>
    <string name="track_fragment_dialog_ok_button">Да</string>
    <string name="track_fragment_dialog_cancel_button">Нет</string>
    <string name="running_activity_havent_got_gps_permitions">Включите разрешение на запись GPS</string>
    <string name="main_fragment_select_track_for_show">Выберите трек для просмотра</string>
    <string name="running_service_distance_pattern">Дистанция %d м.</string>
    <string name="fragment_notification_empty_notification_list">Установите время и дату для уведомления</string>
    <string name="main_activity_running_toolbar_title">Ваши тренировки</string>
    <string name="main_activity_notifications_toolbar_title">Напоминания</string>
</resources>