<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_app_color"
        app:layout_constraintBottom_toTopOf="@id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gpsStatusTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@color/main_app_color"
        android:text="@string/running_activity_wait_gps_label"
        android:textAlignment="center"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/middle_text_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/startLayout"
        android:layout_width="@dimen/large_width"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginBottom="@dimen/large_margin"
        android:alpha="1"
        android:backgroundTint="@color/main_app_color"
        app:cardCornerRadius="@dimen/middle_corner_radius"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startRunningButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/running_activity_start_button_label"
            android:textAllCaps="false"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold"
            app:cornerRadius="@dimen/middle_corner_radius" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/exitLayout"
        android:layout_width="@dimen/large_width"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginBottom="@dimen/large_margin"
        android:alpha="0"
        android:backgroundTint="@color/main_app_color"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/middle_corner_radius"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stopTimerButton"
            android:layout_width="150dp"
            android:layout_height="@dimen/large_button_height"
            android:layout_gravity="start"
            android:insetLeft="0dp"
            app:cornerRadius="@dimen/middle_corner_radius"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/running_activity_finish_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timerTextView"
            android:layout_width="150dp"
            android:layout_height="@dimen/large_button_height"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/running_activity_start_timer_label"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/resultLayout"
        android:layout_width="@dimen/large_width"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginBottom="@dimen/large_margin"
        android:alpha="0"
        android:backgroundTint="@color/main_app_color"
        app:cardCornerRadius="@dimen/middle_corner_radius"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/runDistanceTextView"
            android:layout_width="150dp"
            android:layout_height="@dimen/large_button_height"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/running_activity_run_distance_pattern"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/stoppedTimerTextView"
            android:layout_width="150dp"
            android:layout_height="@dimen/large_button_height"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/running_activity_start_timer_label"
            android:textSize="@dimen/middle_text_size"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>